--- a/Index.html
+++ b/Index.html
@@ -16,8 +16,8 @@
         <ul>
             <li>LISTA1 <li>
             <li>LISTA 2</li>
-            <li>LISTA 3</li>
-            <li>LISTA 3</li>
+            <li>ITEM3</li>
+            <li>ITEM4</li>
         </ul>
     </ul>
 </header>
