--- a/Index.html
+++ b/Index.html
@@ -14,10 +14,10 @@
 <header>ESTE E O HEADER
     <ul>
         <ul>
-            <li>LISTA1 <li>
+            <li>LISTA 1 <li>
             <li>LISTA 2</li>
-            <li>ITEM3</li>
-            <li>ITEM4</li>
+            <li>LISTA 3</li>
+            <li>LISTA 4</li>
         </ul>
     </ul>
 </header>
